// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> renders correctly renders with a language selector 1`] = `
<footer
  role="contentinfo"
>
  <section
    className="footer-navigation"
  >
    <div
      className="container d-md-flex justify-content-between py-3 px-4"
    >
      <div
        className="footer-navigation__brand d-flex flex-column justify-content-between"
      >
        <a
          aria-label="edX Home"
          className="d-block"
          href="http://localhost:18000"
        >
          <img
            alt="Powered by Open edX"
            src="https://edx-cdn.org/v3/default/logo-trademark.svg"
            style={
              {
                "maxHeight": 45,
              }
            }
          />
        </a>
        <div
          className="footer-copyright"
        >
          © 
          2024
           - FCT|FCCN 
          All rights reserved
        </div>
      </div>
      <form
        className="form-inline"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            className="d-inline-block m-0"
            htmlFor="site-footer-language-select"
          >
            Choose Language
          </label>
          <select
            className="form-control-sm mx-2"
            defaultValue="en"
            id="site-footer-language-select"
            name="site-footer-language-select"
          >
            <option
              value="en"
            >
              English
            </option>
            <option
              value="pt-pt"
            >
              Português
            </option>
          </select>
          <button
            className="btn btn-outline-primary btn-sm"
            data-testid="site-footer-submit-btn"
            type="submit"
          >
            Apply
          </button>
        </div>
      </form>
    </div>
  </section>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector 1`] = `
<footer
  role="contentinfo"
>
  <section
    className="footer-navigation"
  >
    <div
      className="container d-md-flex justify-content-between py-3 px-4"
    >
      <div
        className="footer-navigation__brand d-flex flex-column justify-content-between"
      >
        <a
          aria-label="edX Home"
          className="d-block"
          href="http://localhost:18000"
        >
          <img
            alt="Powered by Open edX"
            src="https://edx-cdn.org/v3/default/logo-trademark.svg"
            style={
              {
                "maxHeight": 45,
              }
            }
          />
        </a>
        <div
          className="footer-copyright"
        >
          © 
          2024
           - FCT|FCCN 
          All rights reserved
        </div>
      </div>
    </div>
  </section>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector in pt-pt 1`] = `
<footer
  role="contentinfo"
>
  <section
    className="footer-navigation"
  >
    <div
      className="container d-md-flex justify-content-between py-3 px-4"
    >
      <div
        className="footer-navigation__brand d-flex flex-column justify-content-between"
      >
        <a
          aria-label="edX Home"
          className="d-block"
          href="http://localhost:18000"
        >
          <img
            alt="Powered by Open edX"
            src="https://edx-cdn.org/v3/default/logo-trademark.svg"
            style={
              {
                "maxHeight": 45,
              }
            }
          />
        </a>
        <div
          className="footer-copyright"
        >
          © 
          2024
           - FCT|FCCN 
          All rights reserved
        </div>
      </div>
    </div>
  </section>
</footer>
`;
